# 3_semestr

./: .gitignore
fifo/: CMakeLists.txt  fifo.c  fifo.h  fifo_general.c  fifo_general.h  fifo_reader.c  fifo_writer.c  reader_main.c  test.txt  writer_main.c
message/: CMakeLists.txt  message.c  message.h  message_main.c
message/numbers/: CMakeLists.txt  numbers.c  numbers.h
proxy/: CMakeLists.txt  main.c  proxy.c  proxy.h
proxy/numbers/: CMakeLists.txt  numbers.c  numbers.h
shm_sem/: CMakeLists.txt  reader.c  reader_main.c  shm_sem.h  shm_sem_general.c  shm_sem_general.h  writer.c  writer_main.c
signals/: CMakeLists.txt  main.c  signals.c  signals.h
